Fix spacing between card elements

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -126,8 +126,15 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		}
 	}
 
+	.has-excerpt {
+
+		.reader-related-card-v2__title {
+			margin-bottom: 7px;
+		}
+	}
+
 	.reader-related-card-v2__featured-image {
-		margin: 0 0 19px;
+		margin: 0 0 17px;
 
 		@media #{$reader-related-card-v2-breakpoint-medium} {
 			margin: 0 15px 0 0;
@@ -140,21 +147,22 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 	.reader-related-card-v2__meta {
 		margin-bottom: 16px;
-	}
 
-	.reader-related-card-v2__meta .follow-button {
+		.follow-button {
+			margin-top: -7px;
 
-		@include breakpoint( "<480px" ) {
-			margin-right: 0;
+			@include breakpoint( "<480px" ) {
+				margin-right: 0;
+			}
 		}
-	}
 
-	.reader-related-card-v2__meta .gravatar {
-		margin: 2px 8px 0 0;
-	}
+		.gravatar {
+			margin: 2px 8px 0 0;
+		}
 
-	.reader-related-card-v2__meta .reader-related-card-v2__byline-site {
-		margin-top: -2px;
+		.reader-related-card-v2__byline-site {
+			margin-top: -2px;
+		}
 	}
  }
 
